kubernetes/apps/monitoring/vector/app/aggregator/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: vector-aggregator-tcp
  namespace: monitoring
spec:
  parentRefs:
    - name: internal      # or internal
      namespace: kube-system
      sectionName: mikrotik
    - name: internal
      namespace: kube-system
      sectionName: k8s
    - name: internal
      namespace: kube-system
      sectionName: http
  rules:
    - backendRefs:
        - name: vector-aggregator
          port: 6000
    - backendRefs:
        - name: vector-aggregator
          port: 6001
    - backendRefs:
        - name: vector-aggregator
          port: 8686
